# AlgoScope

./: .gitignore  AGENTS.md  README.md  analyzer.py  app.py  main.py  pyproject.toml  requirements.txt  sentinel.py  threat_log.txt
algoscope/: __init__.py  api.py  cli.py  comparison.py  complexity.py  config.py  models.py  probes.py  report.py  sandbox.py  sentinel.py  service.py  summary.py  utils.py  web_models.py
docker/: runner.Dockerfile
docs/: bubble_sort-data.json  bubble_sort-report.html
examples/: bubble_sort.py  cpu_loop.py  file_writer.py  io_crazy.py  io_heavy.py  linear_search.py  python_sort.py  ram_killer.py  thread_bomb.py
examples/testfile/: monster.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/components/: MonitorPanel.tsx
