[project]
name = "algoscope"
version = "0.1.0"
description = "Linux-based runtime complexity and resource visualizer for students"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
algoscope = "algoscope.cli:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["algoscope"]
