[project]
name = "algoscope"
version = "0.1.0"
description = "Linux-based runtime complexity and resource visualizer for students"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "github-copilot-sdk",
    "psutil>=7.2.2",
    "uvicorn[standard]",
]

[project.scripts]
algoscope = "algoscope.cli:main"
algoscope-api = "algoscope.api:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["algoscope"]
